# mpu

./: .gitignore  CMakeLists.txt  README.md
components/main-controller/: CMakeLists.txt  main-controller.c  main-controller.h
components/mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h
components/slave-spi/: CMakeLists.txt  slave-spi.c  slave-spi.h
components/utils/: CMakeLists.txt  utils.c  utils.h
main/: main.c  main.h
